Them tieu de va 1 so dieu chinh

--- a/question_demo.ipynb
+++ b/question_demo.ipynb
@@ -85,7 +85,11 @@
     "# Line plot for average salary\n",
     "sns.lineplot(x=combined_df.index, y='average_salary', data=combined_df, ax=ax2, color='cyan', marker='o')\n",
     "\n",
-    "\n",
+    "# Customize axes\n",
+    "ax1.set_ylabel('Số lượng công việc', color='purple')\n",
+    "ax2.set_ylabel('Mức Lương Trung Bình (USD)', color='cyan')\n",
+    "ax1.set_xlabel('Chức danh công việc')\n",
+    "plt.title('Số lượng và mức lương trung bình theo chức danh công việc (Top 25)')\n",
     "\n",
     "# Adjust layout for better visibility\n",
     "plt.tight_layout()\n",
